WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128004
DumpRenderTree iOS fails to link: missing rowHeaders and columnHeaders in AccessibilityUIElement
https://bugs.webkit.org/show_bug.cgi?id=128004
Summary
DumpRenderTree iOS fails to link: missing rowHeaders and columnHeaders in Acc...
David Farler
Reported
2014-01-31 11:10:25 PST
Looks like these stubs were missing. "__ZNK22AccessibilityUIElement10rowHeadersERN3WTF6VectorIS_Lm0ENS0_15CrashOnOverflowEEE", referenced from: __ZL18rowHeadersCallbackPK15OpaqueJSContextP13OpaqueJSValueS3_mPKPKS2_PS5_ in libDumpRenderTree.a(AccessibilityUIElement.o) "__ZNK22AccessibilityUIElement13columnHeadersERN3WTF6VectorIS_Lm0ENS0_15CrashOnOverflowEEE", referenced from: __ZL21columnHeadersCallbackPK15OpaqueJSContextP13OpaqueJSValueS3_mPKPKS2_PS5_ in libDumpRenderTree.a(AccessibilityUIElement.o)
Attachments
Patch
(1.45 KB, patch)
2014-01-31 11:11 PST
,
David Farler
cfleizach
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Farler
Comment 1
2014-01-31 11:11:54 PST
Created
attachment 222830
[details]
Patch
David Farler
Comment 2
2014-01-31 11:52:34 PST
Committed
r163185
: <
http://trac.webkit.org/changeset/163185
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug