DumpRenderTree iOS fails to link: missing rowHeaders and columnHeaders in AccessibilityUIElement https://bugs.webkit.org/show_bug.cgi?id=128004

Reviewed by Chris Fleizach.

* DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
(AccessibilityUIElement::columnHeaders): Stub added.
(AccessibilityUIElement::rowHeaders): Stub added.

Canonical link: https://commits.webkit.org/146006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163185 268f45cc-cd09-0410-ab3c-d52691b4dbfc